# claude-workbench

./: .gitignore  .project-tips  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY-NOTES.md  USAGE.md  config.yaml  config.yaml.example  deny.toml  phase2_plan.md  project_status.md  rustfmt.toml  task.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-security-hardening/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-06-PLAN.md  01-CONTEXT.md  01-PLAN-CHECK.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
.planning/quick/260601-iwi-fix-file-browser-mouse-wheel-scroll-whee/: 260601-iwi-PLAN.md  260601-iwi-SUMMARY.md
.planning/quick/260611-g0k-security-audit-fixes-from-project-audit-/: 260611-g0k-PLAN.md  260611-g0k-SUMMARY.md
.planning/quick/260611-ghu-audit-follow-ups-p1-p2-self-update-0-44-/: 260611-ghu-PLAN.md  260611-ghu-SUMMARY.md
.planning/quick/260611-m4v-v0-95-0-pdf-font-fallback-dejavu-folder-/: 260611-m4v-PLAN.md  260611-m4v-SUMMARY.md
.planning/quick/260612-esh-automate-homebrew-formula-bump-in-github/: 260612-esh-PLAN.md  260612-esh-SUMMARY.md
.planning/quick/260615-jwb-editor-copy-cut-paste-shortcuts-and-curs/: 260615-jwb-PLAN.md  260615-jwb-SUMMARY.md
.serena/: project.yml
docs/: SECURITY_REVIEW.md
docs/history/: implementation_plan.md  phase3_plan.md  walkthrough.md
scripts/: .project-tips  install-release.sh  install.ps1  install.sh
src/: app.rs  app_detector.rs  clipboard.rs  config.rs  filter.rs  input.rs  main.rs  session.rs  syntax_registry.rs  terminal.rs  types.rs
src/app/: clipboard.rs  drawing.rs  file_ops.rs  git_ops.rs  job_state.rs  keyboard.rs  mod.rs  mouse.rs  pty.rs  ssh_paste.rs  update.rs
src/app/keyboard/: dialogs.rs  file_browser.rs  global.rs  mod.rs  preview.rs  terminal.rs
src/browser/: markdown.rs  mod.rs  opener.rs  pdf_export.rs  syntax.rs  template.rs  typst_pdf.rs
src/git/: mod.rs
src/input/: mod.rs
src/setup/: dependency_checker.rs  mod.rs  templates.rs  wizard.rs
src/ui/: about.rs  claude_startup.rs  dialog.rs  drag_ghost.rs  file_browser.rs  footer.rs  fuzzy_finder.rs  help.rs  layout.rs  menu.rs  mod.rs  permission_mode.rs  preview.rs  settings.rs  syntax.rs  terminal_pane.rs  update_dialog.rs  wizard_ui.rs
src/update/: check.rs  install.rs  log.rs  mod.rs  release_notes.rs  state.rs  version.rs
tests/: cli.rs
