[package]
name = "claude-workbench"
version = "0.80.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0" # Bumped to match modern deps
crossterm = "0.28.1"
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.9"
dirs = "5.0"
tui-textarea = { git = "https://github.com/0xferrous/tui-textarea.git", branch = "update-ratatui" }
portable-pty = "0.8.1"
clap = { version = "4.5.37", features = ["derive", "env"] }
vt100 = "0.16"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
tui-markdown = "0.3"
pulldown-cmark = "0.10"
shell-escape = "0.1"
arboard = { version = "3.6", features = ["wayland-data-control"] }  # Cross-platform clipboard (X11 + Wayland)
regex = "1.12"
libc = "0.2"
self_update = { version = "0.42", default-features = false, features = [
    "archive-tar",
    "compression-flate2",
    "rustls"
] }
tempfile = "3"

# Typst PDF generation (pure Rust, no external binaries)
# Gated behind `pdf-export` feature (enabled by default).
typst = { version = "0.14.2", optional = true }
typst-pdf = { version = "0.14.2", optional = true }
typst-library = { version = "0.14.2", optional = true }
typst-kit = { version = "0.14.2", default-features = false, features = ["fonts"], optional = true }
comemo = { version = "0.4", optional = true }  # Memoization required by typst::World trait
ecow = { version = "0.2", optional = true }    # EcoString/EcoVec used in typst API

[features]
default = ["pdf-export"]
pdf-export = ["dep:typst", "dep:typst-pdf", "dep:typst-library", "dep:typst-kit", "dep:comemo", "dep:ecow"]
